--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
         "react-hook-form": "^7.55.0",
         "react-router-dom": "6.0.2",
         "react-router-hash-link": "^2.4.3",
+        "react-toastify": "^11.0.5",
         "recharts": "^2.15.2",
         "redux": "^5.0.1",
+        "socket.io-client": "^4.8.1",
         "tailwind-merge": "^3.3.1",
         "tailwindcss-animate": "^1.0.7",
         "tailwindcss-elevation": "^2.0.0",
