--- a/backend/.env
+++ b/backend/.env
@@ -3,10 +3,10 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb://localhost:27017/shiv-mobile-hub
+MONGODB_URI=mongodb+srv://nadge:0000000000@cluster0.krrflue.mongodb.net/shiv-mobile-hub?appName=Cluster0
 
 # JWT Secret
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_SECRET=super-secret
 
 # Google OAuth
 GOOGLE_CLIENT_ID=your-google-client-id
