--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,9 @@ PORT=5000
 NODE_ENV=development
 
 # Database
-MONGODB_URI=mongodb+srv://nadge:0000000000@cluster0.krrflue.mongodb.net/shiv-mobile-hub?appName=Cluster0
+# MONGODB_URI=mongodb+srv://nadge:0000000000@cluster0.krrflue.mongodb.net/shiv-mobile-hub?appName=Cluster0
+MONGODB_URI=mongodb+srv://nadge:0000000000@cluster0.krrflue.mongodb.net/shiv-mobile-hub1?appName=Cluster0
+# MONGODB_URI=mongodb://localhost:27017/shiv-mobile-hub
 
 # JWT Secret
 JWT_SECRET=super-secret
